feat(git): implement git status detection and parsing utilities
- Add isGitRepository() to detect git repositories using checkIsRepo()
- Add getGitStatus() to map file statuses to GitStatus type
- Return absolute paths resolved against git root with symlink normalization
- Handle renamed files (old path as deleted, new path as added/modified)
- Handle conflicted files as modified status
- Set up vitest test infrastructure with 20 comprehensive test cases
- Add tests for modified, untracked, added, deleted, renamed files
- Add tests for merge conflicts, staged modifications, ignored files
- Add tests for edge cases (nonexistent directories, subdirectories)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "declarationMap": true,
     "sourceMap": true,
     "jsx": "react",
-    "types": ["node"]
+    "types": ["node", "vitest/globals"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
