--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "terminal-size": "^4.0.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^16.3.0",
     "@types/fs-extra": "^11.0.4",
     "@types/ink-testing-library": "^1.0.4",
     "@types/node": "^24.10.1",
@@ -55,6 +56,7 @@
     "@vitest/coverage-v8": "^4.0.10",
     "@vitest/ui": "^4.0.10",
     "ink-testing-library": "^4.0.0",
+    "jsdom": "^27.2.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.10"
   }
