docs: update messaging to reflect dashboard identity
- Update package.json description to "Worktree context dashboard"
- Replace "file-browser" keyword with "worktree" and "dashboard"
- Update CLI help header to "Worktree context dashboard for AI-assisted development"
- Update CLI ARGS description from "browse" to "monitor"
- Update GEMINI.md project overview to match CLAUDE.md messaging
- Change "file browser" to "file tree view" in keyboard shortcuts doc

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gpriday/canopy",
   "version": "0.1.0",
-  "description": "Terminal-based file browser built with ink for developers working with AI agents",
+  "description": "Worktree context dashboard for developers working with AI agents",
   "type": "module",
   "main": "./dist/index.js",
   "bin": {
@@ -25,7 +25,8 @@
   "keywords": [
     "terminal",
     "cli",
-    "file-browser",
+    "worktree",
+    "dashboard",
     "tree",
     "ink",
     "copytree",
