feat(ui): replace quit key with Escape and fix build permissions
- Change quit keybinding from 'q' to Escape for more intuitive UX
- Make Escape context-aware: close modals, clear filters, or quit app
- Add chmod +x to build script to preserve CLI executable permissions
- Ensure onQuit handler respects modal state to prevent conflicts

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsc && npm run copy-themes",
+    "build": "tsc && chmod +x dist/cli.js && npm run copy-themes",
     "copy-themes": "mkdir -p dist/theme/bundled && cp src/theme/bundled/*.json dist/theme/bundled/",
     "dev": "tsc --watch",
     "start": "tsx src/cli.ts",
