feat(ui): replace git status glyphs with Nerd Font file type icons
- Add @m234/nerd-fonts package for comprehensive file icon support
- Replace status glyphs (M/A/D/?) with file type icons colored by git status
- Use seti preset for automatic file type detection
- Add special robot icon for AI agent files (CLAUDE.md, etc.)
- Reduce additional filename display from 3 to 2 for cleaner overflow
- Update tests to reflect icon-based display instead of status letters

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "node": ">=20.19.0"
   },
   "dependencies": {
+    "@m234/nerd-fonts": "^0.4.0",
     "clipboardy": "^5.0.0",
     "cosmiconfig": "^9.0.0",
     "execa": "^9.6.0",
